# Rei

./: .gitignore  .gitmodules  README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
.github/workflows/: build.yml
app/: build.gradle.kts  proguard-rules.pro
app/release/baselineProfiles/0/: app-release.dm
app/release/baselineProfiles/1/: app-release.dm
app/src/androidTest/java/com/anatdx/rei/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/assets/: boot_patch.sh  util_functions.sh
app/src/main/cpp/: CMakeLists.txt  apjni.cpp  reijni.cpp  supercall.h
app/src/main/cpp/uapi/: scdefs.h
app/src/main/cpp/yukisu/: jni.c  ksu.h
app/src/main/java/com/anatdx/rei/: ApNatives.kt  KsuNatives.kt  MainActivity.kt  ReiApplication.kt
app/src/main/java/com/anatdx/rei/core/auth/: AppAuthStore.kt  ReiKeyHelper.kt
app/src/main/java/com/anatdx/rei/core/io/: UriFiles.kt
app/src/main/java/com/anatdx/rei/core/log/: ReiLog.kt
app/src/main/java/com/anatdx/rei/core/reid/: ReidClient.kt  ReidLauncher.kt
app/src/main/java/com/anatdx/rei/core/root/: RootAccessState.kt  RootShell.kt
app/src/main/java/com/anatdx/rei/ui/: PowerMenuDialog.kt  ReiApp.kt
app/src/main/java/com/anatdx/rei/ui/auth/: AppAccessListScreen.kt  AuthorizeActivity.kt
app/src/main/java/com/anatdx/rei/ui/components/: PullToRefreshBox.kt  ReiCard.kt
app/src/main/java/com/anatdx/rei/ui/home/: HomeScreen.kt  HomeViewModel.kt  MurasakiStatusCard.kt
app/src/main/java/com/anatdx/rei/ui/logs/: LogsScreen.kt
app/src/main/java/com/anatdx/rei/ui/modules/: ModulesScreen.kt
app/src/main/java/com/anatdx/rei/ui/patches/: PatchesScreen.kt
app/src/main/java/com/anatdx/rei/ui/settings/: SettingsScreen.kt  ThemeMode.kt
app/src/main/java/com/anatdx/rei/ui/theme/: BackgroundStyle.kt  Color.kt  Theme.kt  ThemePreset.kt  Type.kt
app/src/main/java/com/anatdx/rei/ui/tools/: BootToolsScreen.kt
app/src/main/java/com/anatdx/rei/ui/tools/partition/: PartitionManager.kt  PartitionManagerHelper.kt
app/src/main/java/com/anatdx/rei/ui/util/: SELinuxChecker.kt
app/src/main/java/com/anatdx/yukisu/: Natives.kt
app/src/main/java/me/weishu/kernelsu/ui/util/: RootShellCompat.kt
app/src/main/java/me/weishu/kernelsu/ui/webui/: AppIconUtil.kt  MimeUtil.java  MonetColorsProvider.kt  WebUIActivity.kt  WebUIScreen.kt  WebViewHelper.kt  WebViewInterface.kt
app/src/main/res/drawable/: ic_launcher_background.xml  ic_launcher_foreground.xml  ic_launcher_monochrome.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-es/: strings.xml
app/src/main/res/values-fr/: strings.xml
app/src/main/res/values-ja/: strings.xml
app/src/main/res/values-ko/: strings.xml
app/src/main/res/values-ru/: strings.xml
app/src/main/res/values-zh/: strings.xml
app/src/main/res/values-zh-rTW/: strings.xml
app/src/main/res/xml/: file_paths.xml
app/src/test/java/com/anatdx/rei/: ExampleUnitTest.kt
daemon/kernelsu_jni/: CMakeLists.txt  jni.c  ksu.c  ksu.h  legacy.c  prelude.h
daemon/ksuinit/: CMakeLists.txt
daemon/reid/: .gitignore  CMakeLists.txt
daemon/reid/scripts/: embed_assets.py
daemon/reid/src/: apd_entry.hpp  apd_stub.cpp  assets.hpp  cli.cpp  cli.hpp  defs.hpp  init_event.cpp  init_event.hpp  main.cpp  murasaki_dispatch.cpp  murasaki_dispatch.hpp  utils.cpp  utils.hpp
daemon/reid/src/apd/: apd.cpp  apd.hpp  assets.cpp  assets.hpp  cli.cpp  cli.hpp  defs.cpp  defs.hpp  event.cpp  event.hpp  installer.hpp  log.cpp  log.hpp  metamodule.cpp  metamodule.hpp  module.cpp  module.hpp  package.cpp  package.hpp  pty.cpp  pty.hpp  restorecon.cpp  restorecon.hpp  sepolicy.cpp  sepolicy.hpp  supercall.cpp  supercall.hpp  utils.cpp  utils.hpp  version.hpp.in
daemon/reid/src/binder/: murasaki_binder.cpp  murasaki_ipc.cpp  murasaki_service.cpp  murasaki_service.hpp  shizuku_service.cpp
daemon/reid/src/core/: allowlist.cpp  allowlist.hpp  assets.hpp  ksucalls.cpp
daemon/reid/src/flash/: flash_partition.cpp
daemon/reid/src/ksud/: debug.cpp  feature.cpp  ksucalls.hpp  ksud_cli.cpp  su.cpp  umount.cpp
daemon/reid/src/ksud/boot/: apk_sign.cpp  boot_patch.cpp  tools.cpp
daemon/reid/src/ksud/module/: metamodule.cpp  module.cpp  module_config.cpp
daemon/reid/src/ksud/profile/: profile.cpp
daemon/reid/src/ksud/sepolicy/: sepolicy.cpp
docs/: MurasakiZygiskBridge.md
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
scripts/: reibot.py
